modified:   SpamData_GaussianNaiveBayes_Classifier.ipynb 	crrotect the classifier

--- a/SpamData_GaussianNaiveBayes_Classifier.ipynb
+++ b/SpamData_GaussianNaiveBayes_Classifier.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,26 +119,33 @@
     "\n",
     "# Pr(y = 1 | lambda_ML)\n",
     "lambda_ML = np.sum(ytrain)/np.sum(np.ones(ytrain.shape))\n",
-    "\n",
-    "c1_mask = ytrain.repeat(num_features,-1)\n",
-    "c0_mask = 1 - c1_mask\n",
-    "c1_log_train = log_Xtrain*c1_mask\n",
-    "c0_log_train = log_Xtrain*c0_mask\n",
-    "\n",
+    "c0_log_Xtrain = []\n",
+    "c1_log_Xtrain = []\n",
+    "for i in range(ytrain.shape[0]):\n",
+    "    if ytrain[i] == 1:\n",
+    "        c1_log_Xtrain.append(log_Xtrain[i])\n",
+    "    elif ytrain[i] == 0:\n",
+    "        c0_log_Xtrain.append(log_Xtrain[i])\n",
+    "    else:\n",
+    "        print(\"Somthing wrong in ytrain\")\n",
+    "c1_log_Xtrain = np.array(c1_log_Xtrain)\n",
+    "c0_log_Xtrain = np.array(c0_log_Xtrain)\n",
     "for j in range(num_features):\n",
-    "    # Pr(x_j0 | y = 0, mu_j0_ML, sigma_j0_ML) = N(xx_j0|mu.sigma^2)\n",
-    "    mu_jc_ML[0].append(np.sum(c0_log_train[:,j])/np.sum(1-ytrain))\n",
-    "    sigma2_jc_ML[0].append(np.power(np.sum(c0_log_train[:,j]-mu_jc_ML[0][j]),2)/np.sum(1-ytrain))\n",
-    "    # Pr(x_j1 | y = 1, mu_j1_ML, sigma_j1_ML) = N(x_j1|mu.sigma^2)\n",
-    "    mu_jc_ML[1].append(np.sum(c1_log_train[:,j])/np.sum(ytrain))\n",
-    "    sigma2_jc_ML[1].append(np.power(np.sum(c1_log_train[:,j]-mu_jc_ML[1][j]),2)/np.sum(ytrain))\n",
+    "    # Pr(x_j0 | y = 0, mu_j0_ML, sigma_j0_ML) = N(xx_j0|mu_).sigma^2_0)\n",
+    "    mu_jc_ML[0].append(np.sum(c0_log_Xtrain[:,j])/np.sum(1-ytrain))\n",
+    "    # I meet a bug here, it can not use mask there to calculate the sigma, becatuse 0 - mu will contribute the\n",
+    "    # erro in sigma\n",
+    "    sigma2_jc_ML[0].append(np.sum(np.square(c0_log_Xtrain[:,j]-mu_jc_ML[0][j]))/np.sum(1-ytrain))\n",
+    "    # Pr(x_j1 | y = 1, mu_j1_ML, sigma_j1_ML) = N(x_j1|mu_1.sigma^2_1)\n",
+    "    mu_jc_ML[1].append(np.sum(c1_log_Xtrain[:,j])/np.sum(ytrain))\n",
+    "    sigma2_jc_ML[1].append(np.sum(np.square(c1_log_Xtrain[:,j]-mu_jc_ML[1][j]))/np.sum(ytrain))\n",
     "mu_jc_ML = np.array(mu_jc_ML)\n",
     "sigma2_jc_ML = np.array(sigma2_jc_ML)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,18 +159,19 @@
     "        Output:\n",
     "            pred #predicted label\n",
     "    '''\n",
-    "    pr_c0 = np.prod(1/np.sqrt(2*np.pi*sigma2_jc_ML[0])*np.exp(-0.5*(log_features-mu_jc_ML[0])/sigma2_jc_ML[0]))\n",
-    "    pr_c1 = np.prod(1/np.sqrt(2*np.pi*sigma2_jc_ML[1])*np.exp(-0.5*(log_features-mu_jc_ML[1])/sigma2_jc_ML[1]))\n",
+    "    pr_c0 = np.prod(1/np.sqrt(2*np.pi*sigma2_jc_ML[0])*np.exp(-0.5*np.square((log_features-mu_jc_ML[0]))/sigma2_jc_ML[0]))\n",
+    "    pr_c1 = np.prod(1/np.sqrt(2*np.pi*sigma2_jc_ML[1])*np.exp(-0.5*np.square((log_features-mu_jc_ML[1]))/sigma2_jc_ML[1]))\n",
     "    if pr_c0 > pr_c1:\n",
     "        pred = 0\n",
     "    else:\n",
     "        pred = 1\n",
+    "    #print(pred)\n",
     "    return pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,28 +238,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training error rates:  0.4045676998368679\n",
-      "Testing error rates:  0.373046875\n"
+      "Training error rates:  0.11223491027732468\n",
+      "Testing error rates:  0.11002604166666663\n"
      ]
     }
    ],
    "source": [
     "print(\"Training error rates: \",Xtrain_err)\n",
     "print(\"Testing error rates: \",Xtest_err)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The result is not good. Maybe the Gaussian distribution doesn't fit spamdataset well."
    ]
   }
  ],
