new file:   1.py 	modified:   SpamData_GaussianNaiveBayes_Classifier.ipynb 	new file:   SpamData_LogisticRegression_Classifier.ipynb 	new file:   images/Newton method.jpg 	modified:   spamData_BetaBinomialNaiveBayes_ClassifIer.ipynb

--- a/SpamData_GaussianNaiveBayes_Classifier.ipynb
+++ b/SpamData_GaussianNaiveBayes_Classifier.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "dict_keys(['__header__', '__version__', '__globals__', 'Xtrain', 'Xtest', 'ytrain', 'ytest'])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -71,15 +71,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Data preprocessing\n",
     "\n",
     "# Log-transform\n",
-    "log_Xtrain = np.log(Xtrain+1e-7)\n",
-    "log_Xtest = np.log(Xtest+1e-7)"
+    "#  normally np.log(data + 1e-7) is more common\n",
+    "log_Xtrain = np.log(Xtrain+1e-10)\n",
+    "log_Xtest = np.log(Xtest+1e-10)"
    ]
   },
   {
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,21 +239,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training error rates:  0.11223491027732468\n",
-      "Testing error rates:  0.11002604166666663\n"
+      "Training error rates:  0.10995106035889068\n",
+      "Testing error rates:  0.109375\n"
      ]
     }
    ],
    "source": [
+    "# Preprocessing with log(data + 1e-10)\n",
     "print(\"Training error rates: \",Xtrain_err)\n",
     "print(\"Testing error rates: \",Xtest_err)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "preprocessing with log(data+1e-1):\n",
+    "\n",
+    "Training error rates:  0.1690048939641109\n",
+    "\n",
+    "Testing error rates:  0.16341145833333337\n",
+    "\n",
+    "**the error rate is improved by 6%, which is impressive.**"
    ]
   }
  ],
