modified:   README.md 	modified:   SpamData_GaussianNaiveBayes_Classifier.ipynb 	modified:   SpamData_LogisticRegression_Classifier.ipynb 	new file:   SpamDataset_KNN_Classifier.ipynb 	modified:   spamData_BetaBinomialNaiveBayes_ClassifIer.ipynb

--- a/SpamData_LogisticRegression_Classifier.ipynb
+++ b/SpamData_LogisticRegression_Classifier.ipynb
@@ -253,7 +253,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# golden-section search is reference from [https://en.wikipedia.org/wiki/Golden-section_search]\n",
+    "# golden-section search reference from [https://en.wikipedia.org/wiki/Golden-section_search]\n",
+    "# This is a kind of the simplest line search implement.\n",
     "def gss(f, a, b, tol=1e-5):\n",
     "    '''\n",
     "    golden section search\n",
@@ -277,7 +278,7 @@
     "            a = c\n",
     "\n",
     "        # we recompute both c and d here to avoid loss of precision which may lead to incorrect results or infinite loop\n",
-    "        # It's true, because I tried only update one c/d, which failed\n",
+    "        # It's true, because I tried only update one c/d, which failled into infinite loop.\n",
     "        c = b - (b - a) / gr\n",
     "        d = a + (b - a) / gr\n",
     "\n",
@@ -454,13 +455,12 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "x = np.arange(10)\n",
     "\n",
     "plt.plot([i for i in lams], train_err_ls)\n",
     "plt.plot([i for i in lams], test_err_ls)\n",
     "plt.xlim(0,100)\n",
     "plt.legend(['Xtrain_err', 'Xtest_err'], loc='upper left')\n",
-    "plt.xlabel('$\\\\alpha$ xzf')\n",
+    "plt.xlabel('$\\\\alpha$ xzf') # typo: \\\\lambda actully,but I dont want to run it again, it's nightmare.\n",
     "plt.ylabel('Err')\n",
     "plt.show()"
    ]
@@ -528,7 +528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
