modified:   README.md 	modified:   SpamData_GaussianNaiveBayes_Classifier.ipynb 	new file:   images/beta plot.png 	modified:   spamData_BetaBinomialNaiveBayes_ClassifIer.ipynb

--- a/SpamData_GaussianNaiveBayes_Classifier.ipynb
+++ b/SpamData_GaussianNaiveBayes_Classifier.ipynb
@@ -134,7 +134,7 @@
     "for j in range(num_features):\n",
     "    # Pr(x_j0 | y = 0, mu_j0_ML, sigma_j0_ML) = N(xx_j0|mu_).sigma^2_0)\n",
     "    mu_jc_ML[0].append(np.sum(c0_log_Xtrain[:,j])/np.sum(1-ytrain))\n",
-    "    # I meet a bug here, it can not use mask there to calculate the sigma, becatuse 0 - mu will contribute the\n",
+    "    # Be careful, it can not use mask there to calculate the sigma, becatuse 0 - mu will contribute the\n",
     "    # erro in sigma\n",
     "    sigma2_jc_ML[0].append(np.sum(np.square(c0_log_Xtrain[:,j]-mu_jc_ML[0][j]))/np.sum(1-ytrain))\n",
     "    # Pr(x_j1 | y = 1, mu_j1_ML, sigma_j1_ML) = N(x_j1|mu_1.sigma^2_1)\n",
@@ -261,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "preprocessing with log(data+1e-1):\n",
+    "**preprocessing with log(data+1e-1):**\n",
     "\n",
     "Training error rates:  0.1690048939641109\n",
     "\n",
