--- a/spamData_BetaBinomialNaiveBayes_ClassifIer.ipynb
+++ b/spamData_BetaBinomialNaiveBayes_ClassifIer.ipynb
@@ -270,7 +270,7 @@
    "metadata": {},
    "source": [
     "### What do you observe about the training and test errors as $\\alpha$ change?\n",
-    "As $\\alpha$ increases, the error_rate will also raise."
+    "As $\\alpha$ increases, the training and test error_rate are both tend to increase."
    ]
   },
   {
